# process-listlike

./: README.md  Setup.hs  process-extras.cabal  process-listlike.cabal
Debug/: Console.hs
System/Process/: ByteString.hs  Chunks.hs  Lazy.hs  ListLike.hs  Read.hs  Strict.hs  String.hs  Text.hs
System/Process/ByteString/: Lazy.hs
System/Process/ListLike/: Chunks.hs  Class.hs  Instances.hs  Ready.hs  Thread.hs
System/Process/Read/: Chars.hs  Chunks.hs  Compat.hs  Convenience.hs  Instances.hs  Interleaved.hs  ListLike.hs  Monad.hs  Verbosity.hs
System/Process/Text/: Lazy.hs
Tests/: Dots.hs  Interactive.hs  Main.hs  Test2.hs  Test3.hs  Test5.hs  Test6.hs
debian/: changelog
src/: Utils.hs
src/System/Process/: ByteString.hs  Read.hs  Read2.hs  String.hs  Text.hs
src/System/Process/ByteString/: Lazy.hs
src/System/Process/Read/: ByteString.hs  Chars.hs  Chunks.hs  Convenience.hs  Instances.hs  LazyProcess.hs  String.hs  Text.hs
src/System/Process/Read/ByteString/: Lazy.hs
src/System/Process/Read/Text/: Lazy.hs
src/System/Process/Text/: Lazy.hs
src/Tests/: Test2.hs  Test5.hs
