
Name:               process-extras
Version:            0.3.4
Synopsis:           Process extras
Description:        Extra functionality for the Process library
                    <http://hackage.haskell.org/package/process>.
Homepage:           https://github.com/davidlazar/process-extras
License:            MIT
License-file:       LICENSE
Author:             David Lazar, Bas van Dijk
Maintainer:         David Lazar <lazar6@illinois.edu>
Category:           System
Build-type:         Simple
Cabal-version:      >=1.6
Extra-source-files:
  README.md

source-repository head
  Type:             darcs
  Location:         http://src.seereason.com/process-extras

Library
  ghc-options:      -Wall -Werror

  Hs-source-dirs:   src

  Exposed-modules:
    System.Process.ByteString
    System.Process.ByteString.Lazy
    System.Process.Text
    System.Process.Text.Lazy
    System.Process.Read
    System.Process.Read2

  Build-depends:
    base >= 4 && < 5,
    process,
    bytestring,
    text,
    deepseq
