
Name:               process-extras
Version:            0.4.1
Synopsis:           Process extras
Description:        Extra functionality for the Process library
                    <http://hackage.haskell.org/package/process>.
Homepage:           https://github.com/davidlazar/process-extras
License:            MIT
License-file:       LICENSE
Author:             David Lazar, Bas van Dijk
Maintainer:         David Lazar <lazar6@illinois.edu>
Category:           System
Build-type:         Simple
Cabal-version:      >=1.6
Extra-source-files:
  README.md

source-repository head
  Type:             darcs
  Location:         http://src.seereason.com/process-extras

Library
  ghc-options:      -Wall -Werror -O2 -threaded

  Exposed-modules:
    System.Process.Read

  Other-modules:
    System.Process.Read.Chars
    System.Process.Read.Chunks
    System.Process.Read.Compat
    System.Process.Read.Instances
    System.Process.Read.Convenience
  Build-depends:
    base >= 4 && < 5,
    process,
    bytestring,
    mtl,
    text,
    utf8-string,
    deepseq
