Name:               process-extras
Version:            0.5
Synopsis:           Process extras
Description:        Extra functionality for the Process library
                    <http://hackage.haskell.org/package/process>.
Homepage:           https://github.com/davidlazar/process-extras
License:            MIT
License-file:       LICENSE
Author:             David Lazar, Bas van Dijk
Maintainer:         David Lazar <lazar6@illinois.edu>
Category:           System
Build-type:         Simple
Cabal-version:      >=1.6
Extra-source-files:
  README.md

source-repository head
  Type:             darcs
  Location:         http://src.seereason.com/process-extras

Library
  ghc-options:      -Wall -O2 -threaded

  Exposed-modules:
    System.Process.Read
    System.Process.Read.Chars
    System.Process.Read.Chunks
    System.Process.Read.Instances
    System.Process.ByteString
    System.Process.ByteString.Lazy
    System.Process.Text
    System.Process.Text.Lazy

  Build-depends:
    base >= 4 && < 5,
    process,
    bytestring,
    deepseq,
    HUnit,
    ListLike,
    listlike-instances,
    process,
    text,
    time,
    utf8-string

Executable tests
  Main-Is: Tests/Main.hs
  GHC-Options: -Wall -O2 -threaded -rtsopts
  Build-Depends: unix
