Name:               process-listlike
Version:            0.7
Synopsis:           Enhanced version of process-extras
Description:        Extra functionality for the Process library <http://hackage.haskell.org/package/process>.
  This is a drop-in replacement for <http://hackage.haskell.org/package/process-extras>,
  which adds support for creating processes from a CreateProcess, more access to the
  internals, and completes support for the String type.
Homepage:           http://src.seereason.com/process-listlike
License:            MIT
License-file:       LICENSE
Author:             David Lazar, Bas van Dijk, David Fox
Maintainer:         David Fox <dsf@seereason.com>
Category:           System
Build-type:         Simple
Cabal-version:      >=1.8
Extra-Source-Files: changelog

source-repository head
  Type:             darcs
  Location:         http://src.seereason.com/process-listlike

Library
  ghc-options:      -Wall -O2

  Exposed-modules:
    System.Process.Read
    System.Process.Read.Chars
    System.Process.Read.Instances
    System.Process.Read.Interleaved
    System.Process.ByteString
    System.Process.ByteString.Lazy
    System.Process.String
    System.Process.Text
    System.Process.Text.Lazy

  Build-depends:
    base >= 4 && < 5,
    process,
    bytestring,
    HUnit,
    ListLike >= 4.0,
    process,
    text,
    utf8-string

Executable tests
  Main-Is: Tests/Main.hs
  GHC-Options: -Wall -O2 -threaded -rtsopts
  Build-Depends:
    base >= 4 && < 5,
    bytestring,
    HUnit,
    ListLike,
    process,
    process-listlike,
    text,
    utf8-string,
    unix
